[tool.poetry]
name = "scdataloader"
version = "1.1.3"
description = "a dataloader for single cell data in lamindb"
authors = ["jkobject"]
license = "GPL3"
readme = ["README.md", "LICENSE"]
repository = "https://github.com/jkobject/scDataLoader"
keywords = ["scRNAseq", "dataloader", "pytorch", "lamindb", "scPRINT"]

[project]
requires-python = ">=3.10"

[tool.ruff]
# Set the maximum line length to 88.
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E203", "E266", "E265", "F401"]

[tool.poetry.dependencies]
python = "3.10.*"
lamindb = "0.76.3"
bionty = "0.49.0"
cellxgene-census = "*"
torch = "*"
lightning = "*"
anndata = "*"
matplotlib = "*"
seaborn = "*"
ipykernel = "*"
torchdata = "*"
biomart = "*"
pandas = ">=2.0.0"
leidenalg = "*"
decoupler = "*"
django = "*"
scikit-misc = "*"
pytest = { version = "^7.4.3", optional = true }
coverage = { version = "^7.3.2", optional = true }
ruff = { version = "^0.6.4", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }
gitchangelog = { version = "^3.0.4", optional = true }
mkdocs = { version = "^1.5.3", optional = true }

[tool.poetry.extras]
dev = [
    "pytest",
    "coverage",
    "ruff",
    "pytest-cov",
    "gitchangelog",
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocstrings",
    "mkdocs-git-authors-plugin",
    "mkdocs-jupyter",
    "mkdocstrings-python"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scdataloader = 'scdataloader.__main__:main'
