[project]
name = "scdataloader"
version = "1.1.4"
description = "a dataloader for single cell data in lamindb"
authors = [
    {name = "jkobject", email = "jkobject@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["scRNAseq", "dataloader", "pytorch", "lamindb", "scPRINT"]
dependencies = [
    "lamindb==0.76.3",
    "bionty==0.49.0",
    "cellxgene-census>=0.1.0",
    "torch>=2.2.0",
    "lightning>=2.0.0",
    "anndata>=0.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "ipykernel>=6.20.0",
    "torchdata>=0.5.0",
    "biomart>=0.9.0",
    "pandas>=2.0.0",
    "leidenalg>=0.8.0",
    "decoupler>=1.2.0",
    "django>=4.0.0",
    "scikit-misc>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "coverage>=7.3.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.4",
    "gitchangelog>=3.0.4",
    "mkdocs>=1.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.0.0",
    "mkdocstrings>=0.22.0",
    "mkdocs-git-authors-plugin>=0.4.0",
    "mkdocs-jupyter>=0.2.0",
    "mkdocstrings-python>=0.10.0"
]

[tool.ruff]
# Set the maximum line length to 88.
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E203", "E266", "E265", "F401", "F403", "E722", "E741", "E731"]

[project.urls]
repository = "https://github.com/jkobject/scDataLoader"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
scdataloader = { workspace = true }

[scripts]
scdataloader = 'scdataloader.__main__:main'
